<?xml version="1.0"?>
<package format="2">
  <name>rc_rmpc_cpu</name>
  <version>0.0.1</version>
  <description>min cuda node package</description>

  <maintainer email="t-wada@ipx.co.jp">Takayuki Wada</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_pkg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
<exec_depend>custom_pkg</exec_depend>
  <export>

  </export>
</package>
